# 14_BalanceTesHaters

backend/: configuration.yml  logging.ini  main.py  pyproject.toml  server.py
backend/alembic/: env.py
backend/alembic/versions/: 006fa040d28a_create_user_table.py  c03093f70e3e_create_auth_tokens_table.py
backend/balanceteshaters/infra/: container.py  database.py  errors.py  settings.py
backend/balanceteshaters/model/: auth.py  base.py
backend/balanceteshaters/model/repositories/: auth_token_repository.py  user_repository.py
backend/balanceteshaters/routers/: auth_router.py  ml_model.py  ml_router.py
backend/balanceteshaters/services/: auth_service.py
data/: instagram1.json  instagram2.json
docs/: architecture.md
docs/backend/: model.md
docs/frontend/: model.md
